i added a styling to the layout

--- a/Index.html
+++ b/Index.html
@@ -37,9 +37,6 @@
                 <li><img src="assets/community.webp" width="28px" height="25px"> Community</li>
                 <li><img src="assets/feedback.png" width="28px" height="25px"> Feedback</li>
             </ul>
-
-
-
         </div>
         <main class="main-content">
             <header>
@@ -63,6 +60,8 @@
                         <li>🖥️ Support Infrastructure: <span class="status green">🟢 Stable</span></li>
                     </ul>
 
+                    <button class="cloudBtn">View Full Report</button>
+
                 </div>
 
                 <div id="Security-Fundamentals" class="dashboard-card">
@@ -81,6 +80,7 @@
                         <li>⚠️ Risk Management: <span class="status yellow">🟡 Monitoring</span></li>
                         <li>🔒 Access Control: <span class="status green">🟢 Secure</span></li>
                     </ul>
+                    <button class="securityBtn">View Full Report</button>
                 </div>
                 <div id="Development-Projects">
                     <h3>💻 Development & Projects</h3>
@@ -126,7 +126,7 @@
                 </div>
 
                 <div id="Network-Security">
-                    <h3>🔒 Network Security  </h3>
+                    <h3>🔒 Network Security </h3>
                     <p>Firewall, IDS/IPS, and monitoring.</p>
 
                     <div class="metric">
@@ -139,7 +139,10 @@
                         <li>🔗 VPN: <span class="status yellow">🟡 Partial</span></li>
                         <li>👁️ IDS: <span class="status green">🟢 Monitoring</span></li>
                     </ul>
+                    <button class="netBtn">View Full Report</button>
                 </div>
+
+
 
 
             </div>
