i added a media queries

--- a/Index.html
+++ b/Index.html
@@ -52,8 +52,9 @@
                     <h3>☁️ Cloud Infrastructure</h3>
                     <p>Monitoring cloud services, storage, and support infrastructure.</p>
 
-                    <canvas id="cloudChart" width="600" height="400"></canvas>
+                    <!-- <canvas id="cloudChart" width="600" height="400"></canvas> -->
 
+                    <canvas id="cloudChart"></canvas>
                     <ul class="cloud-indicators">
                         <li>☁️Network Status: <span class="status green">🟢 Online</span></li>
                         <li>💾 Cloud Storage: <span class="status yellow">🟡 60% Used</span></li>
@@ -97,7 +98,7 @@
                     <h3>📈 Reports & Analytics</h3>
                     <p>Tracking incidents and analytics trends over time.</p>
 
-                    <canvas id="analyticsChart" width="800px" height="400px"></canvas>
+                    <canvas id="analyticsChart" width="600px" height="300px"></canvas>
                     <div class="analytics-summary">
                         <h4>Summary</h4>
                         <ul class="summaryList">
@@ -115,8 +116,8 @@
                     <h3>🕵️ Threat Intelligence</h3>
                     <p> Monitoring and analyzing cyber threats in real-time.</p>
 
-                    <canvas id="threatChart" width="400" height="300"></canvas>
-
+                    <!-- <canvas id="threatChart" width="400" height="300"></canvas> -->
+                    <canvas id="threatChart"></canvas>
                     <ul class="threadList">
                         <li>🟢 Resolved:<b>15</b></li>
                         <li>🔴 Critical Threats: <b>2</b></li>
